# DATA2DNA

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DATA2DNA_BugReport.docx  DNA_STORAGE_ENGINEERING_SPEC.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSING.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  create_corrupt_tests.py  run.sh  start.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/agents/: compression-scientist.md  data-pipeline-engineer.md  dna-systems-architect.md  error-correction-engineer.md  performance-engineer.md  research-scientist.md  test-engineer.md
.github/workflows/: ci.yml  pages.yml
docs/: GREEN_TECH_RESEARCH.md  index.html
src/: chaos.rs  compressor.rs  consensus.rs  cost_estimator.rs  dna_constraints.rs  fallback.html  fasta.rs  fountain.rs  hypercompress.rs  interleaved_rs.rs  lib.rs  main.rs  oligo_builder.rs  pipeline.rs  reed_solomon.rs  transcoder.rs
static/: benchmark.html  index.html  script.js  style.css
tests/: integration_tests.rs
